@@ -59,6 +59,11 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 <table>
 <tbody align="left" valign="top">
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3288341);return false;">3288341</a><br></td>
+<td>Autotype now added to the DragBar. Drag the image to an input area
+on a Window (e.g. Browser) and PasswordSafe will begin Autotype from there.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3286721);return false;">3286721</a><br></td>
 <td>User can now toggle the database between read-only and read-write
 mode (and vice versa) via a menu item or by double-clicking on the current
