@@ -759,6 +759,7 @@ BEGIN
   IDS_PSWDFONT             "Set Password display font"
   IDS_VKBDFONT             "Set Virtual Keyboard font"
   IDS_DRAGTOCOPY           "Drag this image onto a another window to paste the '%s' field."
+  IDS_DRAGTOAUTOTYPE       "Drag this image onto a another window to start AutoType from there."
   IDS_ADDENTRY             "Add Entry"
   IDS_EDITENTRY            "Edit Entry:   \xab%s\xbb \xab%s\xbb \xab%s\xbb"
   IDS_VIEWENTRY            "View Entry:   \xab%s\xbb \xab%s\xbb \xab%s\xbb"
